@@ -43,6 +43,7 @@ class RadarRenderer {
     void		setShape(int x, int y, int w, int h);
     void		setRange(float range);
     void		setJammed(bool = true);
+    void		toggleFlags();
 
     void		render(SceneRenderer&, bool blank = false);
     void		freeList();
@@ -75,6 +76,7 @@ class RadarRenderer {
     bool		blend;
     bool		smooth;
     bool		jammed;
+    bool		showFlags;		 
     double		decay;
     GLuint		list;
     GLfloat		teamColor[3];
