@@ -3,6 +3,8 @@
 
 * add new updates here without heading until a release
 
+* choose [un]silence - Michael Hoffman, Tim Riker
+* flag on radar/view on/off - Michael Hoffman, Tim Riker
 * -badword server support - Dave Brosius
 * resize radar/msg area - Frank Thilo
 * Drop team flags where player last was on exit - Dave Brosius
